<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lily_white"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:text="@string/base_song_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_m"/>

            <TextView
                android:id="@+id/tv_song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/base_required_field"
                android:lines="1"
                android:textColor="@color/regent_gray"
                android:textColorHint="@color/loblolly"
                android:textSize="@dimen/text_size_m"/>
        </LinearLayout>

        <View
            style="@style/divider_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <LinearLayout
            android:id="@+id/ll_composer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:text="@string/base_composer"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_m"/>

            <TextView
                android:id="@+id/tv_composer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/base_required_field"
                android:lines="1"
                android:textColor="@color/regent_gray"
                android:textColorHint="@color/loblolly"
                android:textSize="@dimen/text_size_m"/>
        </LinearLayout>

        <View
            style="@style/divider_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <LinearLayout
            android:id="@+id/ll_lyricist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:text="@string/base_lyricist"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_m"/>

            <TextView
                android:id="@+id/tv_lyricist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/base_optional_field"
                android:lines="1"
                android:textColor="@color/regent_gray"
                android:textColorHint="@color/loblolly"
                android:textSize="@dimen/text_size_m"/>
        </LinearLayout>

        <View
            style="@style/divider_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <LinearLayout
            android:id="@+id/ll_key_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:text="@string/base_key_signature"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_m"/>

            <TextView
                android:id="@+id/tv_key_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/base_required_field"
                android:lines="1"
                android:textColor="@color/regent_gray"
                android:textColorHint="@color/loblolly"
                android:textSize="@dimen/text_size_m"
                tools:text="1=C"/>
        </LinearLayout>

        <View
            style="@style/divider_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <LinearLayout
            android:id="@+id/ll_time_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:text="@string/base_time_signature"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_m"/>

            <TextView
                android:id="@+id/tv_time_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/base_required_field"
                android:lines="1"
                android:textColor="@color/regent_gray"
                android:textColorHint="@color/loblolly"
                android:textSize="@dimen/text_size_m"
                tools:text="4/4"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>